--- a/app/templates/print.html
+++ b/app/templates/print.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Alba Utilities: Reformat</title>
+<title>Участок {{territory.number}}</title>
 <link rel="stylesheet" href="//unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 <style>
 * {
