got everything working again

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,8 +49,8 @@ BUTTON {
 <h1>Иструменты для Албы</h1>
 
 <form action="./print" method="GET">
-<p>Вводите ссылку на участок полученую от брата ответственего за территорию. Тогда
-нажмите кнобку чтобы получить участок в указанном виде.</p>
+<p>Вводите ссылку на участок (для мобильных устройств) полученую от брата ответственего
+за территорию. Тогда нажмите кнобку чтобы получить участок в указанном виде.</p>
 <div class="row">
 	<label>URL:</label>
 	<input name="url">
