added download function

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,6 +68,7 @@ BUTTON {
 	<label>Получить:</label>
 	<button type="submit">Версия для печати</button>
 	<button type="submit" formaction="./research">Версия для иследования</button>
+	<button type="submit" formaction="./download">Скачать</button>
 </div>
 </form>
 
