refacting, added /border

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,10 +65,10 @@ BUTTON {
 </ul>
 
 <div class="row">
-	<label>Получить:</label>
+	<label>Участок можно получить в разных формах:</label>
+	<button type="submit" formaction="./download">Скачать</button>
 	<button type="submit">Версия для печати</button>
 	<button type="submit" formaction="./research">Версия для иследования</button>
-	<button type="submit" formaction="./download">Скачать</button>
 </div>
 </form>
 
